syntax = "proto3";

package placementgroup;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/placementgroup/protos";

////////////////////////////////////////////////////////////////////////////////

message DeletePlacementGroupRequest {
    string ZoneId = 1;
    string GroupId = 2;
}

message DeletePlacementGroupTaskState {
    DeletePlacementGroupRequest Request = 1;
}

